--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,5 @@
-<!doctype html>
+
+<!DOCTYPE html>
 
 <html lang="en">
 <head>
@@ -8,12 +9,13 @@
   <meta name="author" content="expo@expobrain.net">
 
   <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
   <![endif]-->
 </head>
 
 <body>
-  <img id="payload" src="payload.png">
+  <img id="payload" src="payload.png" style="display: none;">
   <script src="js/loader.js"></script>
+  <script>js2png("payload")</script>
 </body>
 </html>
